# newsletter

./: .env  Cargo.toml
migrations/: 20250820055745_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health.rs
